# rxserver

./: .gitignore  Cargo.toml  LICENSE  LOGGING_GUIDE.md  README.md  README_ARCHITECTURE.md  arch_checker.py  config.example.toml  config.logging.toml  rxserver.toml  server.log.2025-06-11  test_client.rs
.agents/: README.md  agents.md  protocol.md  server.md
.agents/memories/: display.md  extensions.md  protocol.md  server.md  transport.md
.agents/tasks/: implement_opcode.md
.agents/tasks/fix_polyfillarc_pixmap_drawable/: task.md
.agents/tasks/implement_opcode/: task.md
.agents/tasks/implement_shape_extension/: task.md
.agents/tasks/implement_xinput_extension/: task.md
.agents/tasks/investigate_wm_protocols_disconnect/: task.md
.agents/tasks/investigate_xinput_disconnect/: task.md
docs/: IMPL.md  architecture.json
docs/proposed/: BLOCK_STYLE_LOGGING.md
examples/: logging_examples.rs  simple_transport_test.rs  test_animated_renderer.rs  test_handshake.rs  test_window_renderer.rs  transport_test.rs  virtual_display_server.rs
oldsrc/: lib.rs  main.rs  mod.rs  types.rs
oldsrc/config/: mod.rs  schema.rs
oldsrc/config/sources/: environment.rs  registry.rs
oldsrc/diagnostics/: mod.rs
oldsrc/diagnostics/crash/: detection.rs  dumps.rs  recovery.rs  reporting.rs
oldsrc/diagnostics/debugging/: events.rs  mod.rs  performance.rs  protocol.rs  state.rs
oldsrc/diagnostics/health/: alerts.rs  checks.rs  mod.rs  status.rs
oldsrc/diagnostics/metrics/: mod.rs
oldsrc/diagnostics/troubleshooting/: automated.rs  guides.rs
oldsrc/display/: types.rs
oldsrc/display/backend/: mod.rs
oldsrc/fonts/: cache.rs  formats.rs  manager.rs  mod.rs  registry.rs
oldsrc/input/: devices.rs  manager.rs  mod.rs  types.rs
oldsrc/logging/: manager.rs  mod.rs  rotation.rs
oldsrc/logging/formatters/: mod.rs
oldsrc/logging/outputs/: console.rs  database.rs
oldsrc/network/connection/: session.rs
oldsrc/network/discovery/: broadcast.rs  mod.rs
oldsrc/network/monitoring/: bandwidth.rs  health.rs  metrics.rs  mod.rs
oldsrc/network/protocol/: negotiation.rs
oldsrc/network/proxy/: load_balancer.rs  ssh.rs  stunnel.rs  tcp_proxy.rs
oldsrc/network/transport/: mod.rs  named_pipe.rs
oldsrc/platform/: mod.rs  windows.rs
oldsrc/server/: mod.rs  types.rs
oldsrc/server/api/: cli.rs  mod.rs  rest.rs  rpc.rs
oldsrc/server/configuration/: hot_reload.rs  mod.rs  profiles.rs
oldsrc/server/coordination/: communication.rs  dependencies.rs  synchronization.rs
oldsrc/server/lifecycle/: maintenance.rs  mod.rs  restart.rs
oldsrc/server/monitoring/: alerting.rs  dashboards.rs
oldsrc/server/plugins/: manager.rs  mod.rs  registry.rs  sandboxing.rs
oldsrc/server/runtime/: executor.rs  mod.rs  resource_manager.rs  scheduler.rs
oldsrc/server/services/: discovery.rs  health.rs  mod.rs  registry.rs
oldsrc/x11/: mod.rs
oldsrc/x11/events/: mod.rs
oldsrc/x11/extensions/: mod.rs
oldsrc/x11/geometry/: intersection.rs  types.rs
oldsrc/x11/protocol/: endianness.rs  errors.rs  mod.rs  opcodes.rs  parser.rs  serializer.rs  types.rs  validation.rs  wire.rs
oldsrc/x11/requests/: dispatcher.rs  mod.rs
oldsrc/x11/resources/: allocator.rs  cleanup.rs  dependencies.rs  lifecycle.rs  mod.rs  ownership.rs  references.rs  registry.rs
oldsrc/x11/security/: access_control.rs  authorization.rs  mod.rs  policies.rs  resource_limits.rs
oldsrc/x11/visuals/: conversion.rs  formats.rs  selection.rs  types.rs  validation.rs
scripts/: architecture_compliance_checker.py  is_server_running.ps1  is_xeyes_running.ps1  run_server.ps1  run_xeyes.ps1  stop_server.ps1  stop_xeyes.ps1
src/: STATUS.md  config.rs  lib.rs  main.rs  mod.rs
src/config/: config.rs  defaults.rs  example.toml  hot_reload.rs  migration.rs  mod.rs  parser.rs  profiles.rs  types.rs  validation.rs
src/config/formats/: ini.rs  json.rs  mod.rs  toml.rs  xml.rs  yaml.rs
src/config/sources/: command_line.rs  database.rs  file.rs  mod.rs  remote.rs
src/core/: args.rs  atom_manager.rs  config.rs  cursor_manager.rs  error.rs  errors.rs  font_manager.rs  ids.rs  logging.rs  mod.rs  pointer_manager.rs  traits.rs
src/diagnostics/: mod.rs  types.rs
src/display/: capabilities.rs  config.rs  configuration.rs  framebuffer.rs  init.rs  manager.rs  mod.rs  native.rs  native_display.rs  registry.rs  screen.rs  shared_framebuffers.rs  types.rs  virtual_.rs  virtual_display.rs  virtual_display_app.rs  virtual_input.rs  visual.rs  window_renderer.rs
src/fonts/: registry.rs  rendering.rs  types.rs
src/graphics/: context.rs  mod.rs  renderer.rs  types.rs
src/input/: events.rs  keyboard.rs  mod.rs  mouse.rs
src/logging/: analysis.rs  components.rs  compression.rs  filtering.rs  init.rs  lib.rs  logging.rs  macros.rs  mod.rs  types.rs  utils.rs
src/network/: connection.rs  mod.rs
src/platform/: common.rs  mod.rs
src/plugins/: atom_registry.rs  cursor_manager.rs  error.rs  font_manager.rs  mod.rs  registry.rs  window.rs
src/protocol/: builder.rs  connection.rs  constants.rs  endianness.rs  error.rs  events.rs  extension_registry.rs  handler.rs  handlers.rs  handshake.rs  mod.rs  opcodes.rs  request.rs  requests.rs  response.rs  response_builder.rs  responses.rs  serializer.rs  trace_decode.rs  traits.rs  types.rs  validator.rs  wire.rs  writer.rs
src/server/: args.rs  atom_system.rs  client.rs  client_system.rs  colormap_system.rs  config.rs  connection.rs  connection_handler.rs  connection_manager.rs  core.rs  display.rs  display_manager.rs  display_system.rs  error.rs  event_loop.rs  events.rs  extension_registry.rs  gcontext_system.rs  graphics.rs  handlers.rs  input_system.rs  logging.rs  mod.rs  picture_system.rs  pipeline.rs  pixmap_system.rs  request_handler.rs  resource_system.rs  resources.rs  state.rs  tcp.rs  types.rs  window_system.rs
src/transport/: mod.rs  tcp.rs  unix.rs
src/utils/: implementation_status.rs  logging.rs  mod.rs  todo.rs
src/viewer/: mod.rs
src/window/: manager.rs  mod.rs  properties.rs
src/x11/: mod.rs
(+167 files in other folders)
