[package]
name = "rxserver"
version = "0.1.0"
edition = "2024"
authors = ["Pedro Valadés <perikiyoxd@gmail.com>"]
description = "RX X11 Server - A modern, async, and extensible X11 display server implementation in Rust."
license = "Apache-2.0"
repository = "https://github.com/perikiyoxd/rxserver"
keywords = ["x11", "window-system", "display-server", "graphics"]
categories = ["gui", "network-programming"]

[lib]
name = "rxserver"
path = "src/lib.rs"

[[bin]]
name = "rxserver"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.45.1", features = ["full"] }

# Logging
log = "0.4.27"
env_logger = "0.11.8"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
tracing-appender = "0.2.3"

# CLI
clap = { version = "4.5.40", features = ["derive"] }

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Configuration
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
serde_json = "1.0"
serde_yaml = "0.9"

# Binary data/X11 protocol
byteorder = "1.5.0"
nom = "8.0.0"

# Networking
bytes = "1.10.1"
tokio-util = { version = "0.7.15", features = ["codec"] }
futures-util = "0.3.31"

# Date/time
chrono = { version = "0.4.41", features = ["serde"] }

# Async traits
async-trait = "0.1.88"

# Memory management
dashmap = "6.1.0"
parking_lot = "0.12.4"

# Utilities
uuid = { version = "1.17.0", features = ["v4"] }
bitflags = { version = "2.9.1", features = ["serde"] }
dirs = "6.0.0"

# Window rendering
winit = "0.30.11"
softbuffer = "0.4.6"
raw-window-handle = "0.6.2"

# CPU detection
num_cpus = "1.0"
tempfile = "3.20.0"

# Random number generation (for load balancing)
rand = "0.8.5"
sysinfo = "0.35.2"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "winuser",
    "winnt",
    "winerror",
    "processthreadsapi",
    "sysinfoapi",
] }

# [Optional] For X11 constants
# x11 = { version = "2.19", optional = true }

[dev-dependencies]
tokio-test = "0.4.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[lints.rust]
dead_code = "warn"
unreachable_code = "warn"
unused_functions = "warn"
unused_structs = "warn"
unused_enums = "warn"
unused_imports = "warn"
unused_variables = "warn"
